add hands on clock

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-    <section class="container">
+    <section class="clock">
         <div class="hands hour"></div>
         <div class="hands min"></div>
         <div class="hands sec"></div>
