add js on clock

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 
     <section class="clock">
-        <div class="hands hour"></div>
-        <div class="hands min"></div>
-        <div class="hands sec"></div>
+        <div class="hands hour" id="hour" data-hour-hand></div>
+        <div class="hands min" id="min" data-min-hand></div>
+        <div class="hands sec" id="sec" data-sec-hand></div>
         <div class="numbers number-1">1</div>
         <div class="numbers number-2">2</div>
         <div class="numbers number-3">3</div>
@@ -31,6 +31,8 @@
         <div class="numbers number-12">12</div>
     </section>
 
+
+    <script src="./main.js"></script>
 
 </body>
 
